2011-01-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: For OSX compatibility we now quote strings
	in property lists of they contain non-alphanumerics.  We also warn
	when we parse a dictionary with a missing semicolon at the end.
	* Source/NSXMLParser.m: For OSX compatibility we report all character
	data as characters and never as ignorable whitespace, though this
	seems perverse.
	Implement insertion of default attribute values into elements if we
	have parsed an !ATTLIST which defines them.

2011-01-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Print '(null)' rather than '(nil)' for a nil
	object as this seems to be what OSX does now.
	* Source/NSXMLParser.m: Implement partial support for declarations.

2011-01-12  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Implemented more methods.
	([-stringForObjectValue:]): Add code for NSNumberFormatterBehavior10_4.

2011-01-11  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Removed NSLog used for debugging.
	* Source/NSNumberFormatter.m: Fixed decimal separator behavior
	for OS X > 10.4.

2011-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([-stringByStandardizingPath]) Fix bug when
	dealing with three or more separators at the start of a path ...
	should condense them to a single separator.  Thanks to Robert Slover
	for pointing this out.

2011-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate

2011-01-09  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Implemented a few more methods.
	* Source/NSLocale.m: Added code requiring NSNumberFormatter code.

2011-01-09  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Additions/GNUstepBase/config.h.in:
	* Headers/Foundation/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m: Started adding code for new methods.

2011-01-08  Stefan Bidigaray <stefanbidi@gmail.com>
